# molforge

./: .env.example  .gitignore  LICENSE  README.md  SECURITY.md  pyproject.toml
contracts/: schema.py
examples/: api-run-request.json  biocompute-targets.json  cxcr4_scar_pain.md
scripts/: bootstrap_reinvent4.sh  deploy_modal_remote_gpu.sh  download_reinvent_prior.py
scripts/reinvent4/: check_env.py  install_reinvent4_mac.sh  run_sampling.sh
src/molforge/: api.py  cli.py
tests/: test_e2e.py
tests/test_admet/: test_chembl_activities.py  test_consensus.py  test_evebio.py  test_liability.py  test_off_target.py  test_phase0_admet_smoke.py  test_pipeline_cli.py  test_ranker.py  test_scorer.py  test_vina_normalizer.py
tests/test_core/: test_api.py  test_cli.py  test_fullloop.py  test_fullloop_cli.py  test_input.py  test_llm.py  test_multi_target_batch.py  test_pipeline.py  test_rescore_cli.py  test_store.py
tests/test_docking/: test_boltz2_rescoring.py  test_chembl.py  test_diffdock_runner.py  test_gene_mapping.py  test_module.py  test_multi_pose_reselect.py  test_phase0_afdb_smoke.py  test_phase0_boltz2_smoke.py  test_phase0_openfold3_smoke.py  test_pocket.py  test_pose_rescorer.py  test_pose_rmsd_from_cif.py  test_pose_rmsd_symmetry.py  test_posebench_gate.py  test_posebench_rescore_gate.py  test_posebusters_target.py  test_rmsd_chain_equivalent.py  test_rmsd_docstring_contract.py  test_screen.py  test_structure.py  test_vina.py
tests/test_generative/: test_env_check.py  test_filters.py  test_module.py  test_phase0_reinvent4_smoke.py  test_reinvent_backend.py
(+74 files in other folders)
