[project]
name = "molforge"
version = "0.1.0"
description = "Small-molecule drug discovery platform — consumes biocompute TargetCandidate JSON, produces ranked candidates via Vina + ADMET-AI (CPU-First MVP)"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "httpx>=0.27",
    "numpy>=2.2,<2.3",
    "pandas>=2.3,<2.4",
    "rdkit>=2024.3",
]

[project.optional-dependencies]
admet = ["admet-ai>=1.3"]
docking = ["meeko>=0.6", "gemmi>=0.6"]
evebio = ["huggingface-hub>=0.24", "pandas>=2.3,<2.4", "pyarrow>=15"]
generative = []  # REINVENT 4 is deferred to CPU sampling / v2 runtime path
dev = ["pytest>=8", "pytest-asyncio>=0.23", "ruff>=0.6"]

[project.scripts]
molforge = "molforge.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/molforge", "contracts"]

[dependency-groups]
dev = [
    "openmm>=8.5.1",
    "openmmforcefields>=0.15.1",
    "pdbfixer>=1.12.0",
    "posebusters>=0.6.5",
]
